--- a/main.css
+++ b/main.css
@@ -1,47 +1,53 @@
 /* COMMON */
+body {
+  margin: 0;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
 a {
   text-decoration: none;
+  color: white;
 }
 
-.header {
-  background-color: #0b243a;
-  height: 100px;
+/* NAVBAR */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #263343;
+  padding: 15px 20px;
+}
+
+.navbar_logo {
+  font-size: 24px;
+  color: white;
+}
+
+.navbar_logo i {
+  color: #d49466;
+}
+
+.navbar_menu {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+
+.navbar_menu li {
+  padding: 8px 12px;
+}
+
+.navbar_menu li:hover {
+  background-color: #d49466;
+  border-radius: 4px;
+}
+
+.navbar_icons {
+  list-style: none;
+  color: white;
   display: flex;
 }
 
-.header img {
-  margin: 30px 0 30px 30px;
-}
-
-.header .logo {
-  color: #fafafa;
-  font-weight: 700;
-  position: relative;
-  top: 40px;
-  left: 10px;
-}
-
-.header ol {
-  display: flex;
-  margin-left: 80px;
-}
-
-.header ol a {
-  color: #fafafa;
-  padding: 10px;
-  font-size: 12px;
-  font-weight: 550;
-  position: relative;
-  top: 40px;
-}
-
-.header .twitter,
-.header .facebook {
-  background-color: #fafafa;
-  margin: 40px 0;
-}
-
-.header .twitter {
-  margin-left: 80px;
-  margin-right: 10px;
+.navbar_icons li {
+  padding: 8px 12px;
 }
