헤더 1차 완성

--- a/main.css
+++ b/main.css
@@ -1,53 +1,63 @@
-/* COMMON */
+html,
 body {
   margin: 0;
-  font-family: "Source Sans Pro", sans-serif;
+  padding: 0;
+  font-size: 16px;
 }
+
+/* #container {
+  width: 1400px;
+  height: 100vh;
+  margin: 0 auto;
+  background-color: #fff5f5;
+} */
 
 a {
   text-decoration: none;
-  color: white;
 }
 
-/* NAVBAR */
-.navbar {
+nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  background-color: #263343;
-  padding: 15px 20px;
+  width: 100%;
+  height: 100px;
+  background-color: #002442;
+  color: #fff;
 }
+
 
 .navbar_logo {
-  font-size: 24px;
-  color: white;
-}
-
-.navbar_logo i {
-  color: #d49466;
-}
-
-.navbar_menu {
   display: flex;
-  list-style: none;
-  padding-left: 0;
+  align-items: center;
 }
 
-.navbar_menu li {
-  padding: 8px 12px;
+.navbar_logo .fa-accusoft {
+  margin-right: 10px;
+  color: #ffcc80;
 }
 
-.navbar_menu li:hover {
-  background-color: #d49466;
-  border-radius: 4px;
+.navbar_logo a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.navbar_icons {
-  list-style: none;
-  color: white;
+.navbar_menu {}
+
+.navbar_menu ul {
   display: flex;
 }
 
-.navbar_icons li {
-  padding: 8px 12px;
+.navbar_menu ul li {
+  margin-right: 50px;
+  font-size: 14px;
+}
+
+.navbar_menu ul li:last-child {
+  margin-right: 0;
+}
+
+.navbar_icons .fa-facebook-f {
+  margin-left: 15px;
 }
